syntax = "proto3";

import "util/tracing/proto/tracing.proto";
import "sigmap/sigmap.proto";
import "rpc/proto/rpc.proto";

option go_package = "sigmaos/apps/cache/proto";

message HotShardsReq {
  uint32 topN = 1;
}

message HotShardsRep {
  repeated uint32 shardIDs = 1;
  repeated uint64 hitCnts = 2;
}

message CacheReq {
  string key = 1;
  bytes value = 2;
  uint32 shard = 3;
  uint32 mode = 4;
  SpanContextConfig spanContextConfig = 5;
  TfenceProto fence = 6;
}

message CacheGetDescriptor {
  string key = 1;
  uint32 shard = 2;
}

message CacheMultiGetReq {
  repeated CacheGetDescriptor gets = 1; // (key, shard) pairs of get requests
  SpanContextConfig spanContextConfig = 2;
  TfenceProto fence = 3;
}

message CacheMultiGetRep {
  repeated uint64 lengths = 1;
  Blob blob = 2;
}

message ShardReq {
  uint32 shard = 1;
  TfenceProto fence = 2;
  map<string, bytes> vals = 3;
}

message CacheOK {}

message CacheRep {
  bytes value = 1;
}

message ShardData {
  map<string, bytes> vals = 1;
}

message CacheString {
  string val = 1;
}

message CacheInt {
  int64 val = 1;
}
